--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 $box-shadow-1: rgba(100, 100, 111, 0.2) 0 5px 25px 0;
 
 * {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif; font-weight: 400; font-size: 16px;
 }
 
 button.btn-1 {
