--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,1 +1,3 @@
-<div class="footer"></div>
+<div class="footer">
+  <p style="font-family: 'Pecita', sans-serif; font-size: 25px;">Chỗ này chưa biết để footer là gì</p>
+</div>
