--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,1 +1,3 @@
-<div class="header"></div>
+<div class="header">
+  <p style="font-family: 'Pecita', sans-serif; font-size: 25px;">Chỗ này chưa biết để header là gì</p>
+</div>
