AF-04 Add firebase

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,9 +32,10 @@
       <div class="main-banner row">
         <div class="col-lg-4 main-banner-left">
           <h1>aloha flora</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium beatae, distinctio, dolor
-            eius enim ex excepturi id laborum nemo nisi, obcaecati omnis provident quasi quisquam tempore tenetur unde
-            voluptatibus!</p>
+          <p>Tự hào là nơi hội tụ của vô số các loại hoa được chọn lọc tỉ mỉ và được thực hiện bởi
+            những bàn tay tinh tế và đầy chuyên nghiệp của nghệ nhân Chee Đỗ dày dặn kinh nghiệm, tạo ra những sản phẩm về
+            hoa đầy tính sáng tạo mang phong cách tinh tế nhưng không thiếu sự sang trọng, đẳng cấp đến từng chi
+            tiết.</p>
           <div class="left-button dpl-flex">
             <button class="left-button-1 btn-1" (click)="onNavigateTo(link.facebook)">Bouquet</button>
             <button class="left-button-2 btn-2" (click)="onNavigateTo(link.facebook)">Readmore</button>
